@@ -1,8 +1,8 @@
 
-SUBDIRS = libexif libjpeg test po
+SUBDIRS = m4  libexif libjpeg test po
 
 CONFIG_CLEAN_FILES =
-EXTRA_DIST = @PACKAGE@.spec
+EXTRA_DIST = config.rpath  @PACKAGE@.spec
 
 
 ########################################################################
@@ -17,3 +17,5 @@ dist-hook:
 dist-bzip2:
 	-chmod -R a+r $(distdir)
 	-$(TAR) chojf $(distdir).tar.bz2 $(distdir)
+
+ACLOCAL_AMFLAGS = -I m4
